Feedback UI added to app

--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -76,7 +76,23 @@
         app:SpinKit_Color="?attr/colorSecondary"
         app:SpinKit_Style="PulseRing" />
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/start_button"
+        android:gravity="right|center">
 
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/feedback_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="?attr/colorSecondaryVariant"
+            app:iconTint="@color/white"
+            app:icon="@drawable/ic_baseline_feedback" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </RelativeLayout>
