--- a/app/src/main/res/values/app_icon_background.xml
+++ b/app/src/main/res/values/app_icon_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="app_icon_background">#66EF84</color>
+    <color name="app_icon_background">#00796B</color>
 </resources>
