--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -35,7 +35,7 @@
              android:layout_width="20dp"
              android:layout_height="20dp"
              app:tint="@color/indigo"
-             android:src="@drawable/ic_baseline_lock_24" />
+             android:src="@drawable/icon_lock" />
 
 
 
