--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,6 +6,6 @@
         android:id="@+id/menu_item_settings"
         android:title=""
         app:showAsAction="always"
-        android:icon="@drawable/ic_baseline_settings_24"
+        android:icon="@drawable/icon_settings"
         />
 </menu>
