--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,7 +25,7 @@
 
     <style name="startButton" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
         <item name="backgroundTint">?attr/colorPrimary</item>
-        <item name="icon">@drawable/ic_baseline_sms_24</item>
+        <item name="icon">@drawable/icon_sms</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="cornerRadius">60dp</item>
         <item name="elevation">20dp</item>
